--- a/lab5/index31.html
+++ b/lab5/index31.html
@@ -16,9 +16,14 @@
                 }
                 while(i <=+ n);
                 alert('Фактарыял ліку '+n+' роўны '+z);
-            } else if(n==0){
+               } 
+			else if(n==0){
                 alert('Фактарыял ліку '+n+' роўны'+z);
-            } else if (isNaN(n) || n==' ' || n==''){
+                } 
+			else if(n==1){
+                alert('Фактарыял ліку '+n+' роўны'+z);
+				}
+			else if (isNaN(n) || n==' ' || n==''){
                  alert('Вы ўвялі некарэктнае значэнне!');
              } else if (n<0){
                  alert('увядзіце дадатны лік!');
