--- a/lab5/index34.html
+++ b/lab5/index34.html
@@ -10,20 +10,34 @@
 		case "1":
         case "2":
         case "12":
+		case "01":
+        case "02":
+        case "12":
+		
 		alert('Зіма'); break;
+		
         case "3":
         case "4":
         case "5":
+		case "03":
+        case "04":
+        case "05":
 		alert('Вясна'); break;
+		
         case "6":
         case "7":
         case "8":
+		case "06":
+        case "07":
+        case "08":
 		alert('Лета'); break;
+		
         case "9":
         case "10":
         case "11":
+		case "09":  
 		alert('Восень'); break;
-		
+	
 		default:
 		alert('Месяца з такім нумарам не існуе'); break;;
 	}
