--- a/lab4/index25.html
+++ b/lab4/index25.html
@@ -7,11 +7,15 @@
   <script>
     var a  = prompt('Увядзіце пераменную a');
 	var b  = prompt('Увядзіце пераменную b');
-	var result =(!parseInt(a) || isNaN(a) || !parseInt(b) || isNaN(b)) ?
-	"уведзены некарэктныя дадзеныя!":
-	(a == b) ? 'значэнні роўныя' : 'значэнні не роўныя';
-	alert (result);
-	
+	  if (a=='' || b==''){
+	    alert("увядзіце дадзеныя!!!");
+	   }
+	  else {
+	    var result =( isNaN(a) || isNaN(b) || a==' ' || b==' ') ?
+	      "уведзены некарэктныя дадзеныя!":
+	      (a == b) ? 'значэнні роўныя' : 'значэнні не роўныя';
+	      alert (result);
+	  }
 	
 </script>
 </body>
