--- a/lab6/index37.html
+++ b/lab6/index37.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
+    <meta charset="utf-8">
   <head>
     <script>
 	  function showMessage() {
-		alert('Прывітанне ўсім прысутным ад Віталя Валянцінавіча!');
+		alert("Привет всем присутствующим от Виталия Валентиновича!");
 		}
 	
 	</script>
