--- a/lab4/index25.html
+++ b/lab4/index25.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <meta charset="utf-8">
   <head>
     <title>Аператары галінаванняў і ўмоў у JavaScript</title>
   </head>
