--- a/lab5/index32.html
+++ b/lab5/index32.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+    <meta charset="utf-8">
     <head>
         <title>Прыклад бясконцага цыклу з перарываннем  Break</title>
     </head>
