--- a/lab5/index33.html
+++ b/lab5/index33.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+    <meta charset="utf-8">
     <head>
         <title>Прыклад цыклу са спыненнем ітэрацыі дырэктыўнае continue</title>
     </head>
