--- a/lab5/index34.html
+++ b/lab5/index34.html
@@ -1,47 +1,48 @@
 <!DOCTYPE html>
 <html>
-    <meta charset="utf-8">
 <head>
-	<title>Заданне 1</title>
+    <title>Дата</title>
+    <meta charset="utf-8">
 </head>
 <body>
-<script>
-	when = window.prompt("Увядзіце нумар месяца");
-	switch(when) {
-		case "1":
-        case "2":
-        case "12":
-		case "01":
-        case "02":
-        case "12":
-		
-		alert('Зіма'); break;
-		
-        case "3":
-        case "4":
-        case "5":
-		case "03":
-        case "04":
-        case "05":
-		alert('Вясна'); break;
-		
-        case "6":
-        case "7":
-        case "8":
-		case "06":
-        case "07":
-        case "08":
-		alert('Лета'); break;
-		
-        case "9":
-        case "10":
-        case "11":
-		case "09":  
-		alert('Восень'); break;
-	
-		default:
-		alert('Месяца з такім нумарам не існуе'); break;;
-	}
-</script>
+	<script>
+		let date =  prompt('Увядзіце дату у фармаце: (12/10/2018) у якасці раздзяляльніка выкарыстайце \" - . / \" : ','');
+		const reg = /^(?=\d)(?:(?:31(?!.(?:0?[2469]|11))|(?:30|29)(?!.0?2)|29(?=.0?2.(?:(?:(?:1[6-9]|[2-9]\d)?(?:0[48]|[2468][048]|[13579][26])|(?:(?:16|[2468][048]|[3579][26])00)))(?:\x20|$))|(?:2[0-8]|1\d|0?[1-9]))([-.\/])(?:1[012]|0?[1-9])\1(?:1[6-9]|[2-9]\d)?\d\d(?:(?=\x20\d)\x20|$))?(((0?[1-9]|1[012])(:[0-5]\d){0,2}(\x20[AP]M))|([01]\d|2[0-3])(:[0-5]\d){1,2})?$/;
+        let str;
+        if(reg.test(date)) str = date.split(/[-/.]/gm);
+          else alert('Вы не ўвялі дату!');
+        let month = str[1];
+        let delzero = month.split(/^0/gm);
+        let month2;
+        if(delzero.length > 1) month2 = delzero[1];
+        else month2 = delzero[0];
+     
+        
+        switch (Number(month2)) {
+	      case 12:
+	      case 1:
+	      case 2:      
+	         alert("Зіма!");
+	         break;
+	      case 3:
+	      case 4:
+	      case 5:      
+	         alert("Вясна!");
+	         break;
+	      case 6:
+	      case 7:
+	      case 8:      
+	         alert("Лета!");
+	         break;
+	      case 9:
+	      case 10:
+	      case 11:      
+	         alert("Восень!");
+	         break;      
+	      default:
+	         alert("Восень!");
+	      break;
+	    }
+	</script>
 </body>
 </html>
