--- a/lab6/index37.html
+++ b/lab6/index37.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
 <html>
-    <meta charset="utf-8">
+    
   <head>
+    <meta charset="utf-8">
     <script>
 	  function showMessage() {
-		alert("Привет всем присутствующим от Виталия Валентиновича!");
+		alert("РџСЂС‹РІС–С‚Р°РЅРЅРµ СћСЃС–Рј РїСЂС‹СЃСѓС‚РЅС‹Рј Р°Рґ Р’С–С‚Р°Р»СЏ Р’Р°Р»СЏРЅС†С–РЅР°РІС–С‡Р°!");
 		}
 	
 	</script>
