--- a/lab6/index38.html
+++ b/lab6/index38.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>  </head>
+  <head> 
+    <meta charset="UTF-8">
+  </head>
   <body>
     <script>
 	  function  showMessage() {
-	  var message = 'Прывітанне, я - Лукашэнка Аляксандр Рыгоравіч!';
+	  var message = 'РџСЂС‹РІС–С‚Р°РЅРЅРµ, СЏ - Р›СѓРєР°С€СЌРЅРєР° РђР»СЏРєСЃР°РЅРґСЂ Р С‹РіРѕСЂР°РІС–С‡!';
 	  alert(message);
 	  }
 	  showMessage();
