--- a/lab6/index41.html
+++ b/lab6/index41.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>  </head>
+  <head> 
+  <meta charset="UTF-8">
+  </head>
   <body>
     <script>
-	  var userName = 'Трамп';
+	  var userName = 'РўСЂР°РјРї';
 	  function  showMessage() {
-	    var userName = 'Меркель';
-		var message = 'Прывітанне, я ' + userName;
+	    var userName = 'РњРµСЂРєРµР»СЊ';
+		var message = 'РџСЂС‹РІС–С‚Р°РЅРЅРµ, СЏ ' + userName;
 		alert(message);
 		}
 		showMessage();
-		alert(userName); // значэнне зменена
+		alert(userName); // Р·РЅР°С‡СЌРЅРЅРµ Р·РјРµРЅРµРЅР°
 	 
     </script>
   </body>
