--- a/lab6/index42.html
+++ b/lab6/index42.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>  </head>
+  <head> 
+    <meta charset="UTF-8">
+  </head>
   <body>
     <script>
 	  
@@ -8,7 +10,7 @@
 	    from = '**' + from + '**'; //1 
 		alert(from + '\n\n' + text);
 		}
-		var from  = 'Уладзімір Ілліч Сямашка', msg = 'Прывітанне!'; //2
+		var from  = 'РЈР»Р°РґР·С–РјС–СЂ Р†Р»Р»С–С‡ РЎСЏРјР°С€РєР°', msg = 'РџСЂС‹РІС–С‚Р°РЅРЅРµ!'; //2
 		showMessage(from, msg);
 		alert(from);
 	   
