--- a/lab6/index43.html
+++ b/lab6/index43.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
+   
+  <head> 
     <meta charset="utf-8">
-  <head>  </head>
+  </head>
   <body>
     <script>
 	  
 	  function  showMessage(from, text) {
 	    if (text == undefined) {
-		text = 'тэкст не перададзены';
+		text = 'С‚СЌРєСЃС‚ РЅРµ РїРµСЂР°РґР°РґР·РµРЅС‹';
 		}
 		alert(from + ": " + text);
 		}
-	    showMessage("Віталь Валянцінавіч","Прывітанне!");
-		showMessage("Віталь Валянцінавіч");
+	    showMessage("Р’С–С‚Р°Р»СЊ Р’Р°Р»СЏРЅС†С–РЅР°РІС–С‡","РџСЂС‹РІС–С‚Р°РЅРЅРµ!");
+		showMessage("Р’С–С‚Р°Р»СЊ Р’Р°Р»СЏРЅС†С–РЅР°РІС–С‡");
 	   
 	 
     </script>
